# mandates

./: .env.example  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_READY.md  LOGS.md  README.md  REQUIREMENTS.md  VERSIONS.md  iframetest.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
.github/: copilot-instructions.md
.github/workflows/: dev_UN80-Dboard2-Dev.yml  dev_ads.yml  dev_un80analytics.yml  main_un80analytics.yml
data/: README.md  all_reports_dashboard.json  entities.json  entity_details.csv  mandate_entities.csv  organs.json  ppb2026_unique_mandates_with_metadata.json
data-processing/: 01-download-ppb.py  02-parse_ppb_docs.py  03-extract_ppb_mandates.py  main.py  pyproject.toml
data-processing/docs/: review.md
data-processing/ppb_processing/: a_download.py  b_parse_downloaded.py  c_extract_parsed.py  d_validate_extracted.py  e_export_excel.py
data-processing/utils/: cache.py  data_cleaning.py  docx_utils.py  llm_extract_mandates.py  ods_api.py  plan_outline.py
data/references/: entity_names.tsv  peacekeeping_mission_budgets.csv  (+4 more)
docs/: COLORS.md  blueprint.md  review-mechanisms.md
notes/: HANDOFF.md  PLAN.md  STRATEGIC_REVIEW.md
ppb-viewer/: README.md  index.html
snippets/: BudgetTreemap.tsx  MemberStatesTreemap.tsx  SDGExpensesTreemap.tsx
sql/: refresh_unified_documents.sql
src/: README.md
website/: .dockerignore  .prettierrc  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+435 files in other folders)
