[project]
name = "data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "natsort>=8.4.0",
    "openai>=2.36.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=15.0.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = true
